--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,139 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+* {
+    margin: 0;
+    font-family: "Quicksand";
+    color: #333;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    border-left: 150px solid yellow;
+    border-right: 150px solid yellow;
+    height: 100%;
+}
+
+.navbar {
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    max-width: auto;
+    max-height: 100px;
+    margin: 0 auto;
+    margin-left: 0 auto;
+    border-bottom: 1px solid #f2f2f2;
+    background-color: yellow;
+    height: 100%;
+    width: 100%;
+}
+
+.navbar-title {
+    text-align: left;
+    background-color: rgb(5, 5, 158);
+    color: yellow;
+    border-radius: 8px;
+    margin-left: 16px;
+    padding: 6px;
+    height: 100%;
+}
+
+.imgNavbar {
+    display: block;
+    margin: 0 auto;
+    margin-top: 0 auto;
+    padding-bottom: 20px;
+    height: 100%;
+}
+
+.home-link {
+    text-align: left;
+    background-color: rgb(5, 5, 158);
+    color: yellow;
+    border-radius: 8px;
+    margin-left: 16px;
+    padding: 6px;
+    height: 100%;
+}
+
+.home-link:hover {
+    position: relative;
+    top: 4px;
+    color: white;
+    height: 100%;
+}
+
+.add-link {
+    text-align: left;
+    background-color: rgb(5, 5, 158);
+    color: yellow;
+    border-radius: 8px;
+    margin-left: 16px;
+    padding: 6px;
+    height: 100%;
+}
+
+.add-link:hover {
+    position: relative;
+    top: 4px;
+    color: white;
+    height: 100%;
+}
+
+.home {
+    padding-bottom: 70px;
+    height: 100%;
+    width: 100%;
+}
+
+.home-title {
+    text-align: center;
+    background-color: rgb(5, 5, 158);
+    color: yellow;
+    border-radius: 8px;
+    height: 100%;
+    width: 100%;
+}
+
+.pokemon-title {
+    color: yellow;
+    text-align: center;
+    border-radius: 8px;
+    background-color: rgb(5, 5, 158);
+    height: 100%;
+    width: 100%;
+}
+
+.pokemon-preview {
+    display: inline-block;
+    align-content: center;
+    text-align: center;
+    margin-left: 16px;
+    margin-right: 8px;
+    margin-bottom: 30px;
+    width: 150px;
+    padding-bottom: 30px;
+    border: 1px solid rgb(5, 5, 158);
+    border-radius: 8px;
+    height: 100%;
+}
+
+.pokemon-types {
+    text-align: left; 
+    height: 100%;
+    width: 100%;
+}
+
+.pokemon-types-diviser {
+    border: 2px solid black;
+    height: 100%;
+}
+
+.pokemon-types-images {
+    align-content: flex-end;
+    height: 100%;
+    width: 100%;
+}
+
+.pokemon-preview:hover {
+    box-shadow: 0px 8px 12px rgb(5, 5, 158);
+    height: 100%;
 }
