--- a/src/index.css
+++ b/src/index.css
@@ -89,8 +89,8 @@ body {
     background-color: rgb(5, 5, 158);
     color: yellow;
     border-radius: 8px;
-    height: 100%;
-    width: 100%;
+    height: auto;
+    width: auto;
 }
 
 .pokemon-title {
@@ -111,8 +111,8 @@ body {
     margin-bottom: 30px;
     width: 150px;
     padding-bottom: 30px;
-    border: 1px solid rgb(5, 5, 158);
-    border-radius: 8px;
+    border: 2px solid rgb(5, 5, 158);
+    border-radius: 10px;
     height: 100%;
 }
 
@@ -123,7 +123,7 @@ body {
 }
 
 .pokemon-types-diviser {
-    border: 2px solid black;
+    border: 2px solid rgb(5, 5, 158);
     height: 100%;
 }
 
@@ -131,6 +131,11 @@ body {
     align-content: flex-end;
     height: 100%;
     width: 100%;
+}
+
+.pokemon-types-images-diviser {
+    border: 2px solid rgb(5, 5, 158);
+    height: 100%;    
 }
 
 .pokemon-preview:hover {
