--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 body {
     border-left: 150px solid yellow;
     border-right: 150px solid yellow;
-    height: 100%;
+    height: auto;
 }
 
 .navbar {
@@ -17,13 +17,11 @@ body {
     display: flex;
     align-items: center;
     max-width: auto;
-    max-height: 100px;
-    margin: 0 auto;
-    margin-left: 0 auto;
-    border-bottom: 1px solid #f2f2f2;
+    max-height: auto;
     background-color: yellow;
-    height: 100%;
-    width: 100%;
+    height: auto;
+    width: auto;
+    position: relative;
 }
 
 .navbar-title {
@@ -31,9 +29,9 @@ body {
     background-color: rgb(5, 5, 158);
     color: yellow;
     border-radius: 8px;
-    margin-left: 16px;
+    left: 0;
     padding: 6px;
-    height: 100%;
+    height: auto;
 }
 
 .imgNavbar {
@@ -49,7 +47,6 @@ body {
     background-color: rgb(5, 5, 158);
     color: yellow;
     border-radius: 8px;
-    margin-left: 16px;
     padding: 6px;
     height: 100%;
 }
@@ -66,7 +63,7 @@ body {
     background-color: rgb(5, 5, 158);
     color: yellow;
     border-radius: 8px;
-    margin-left: 16px;
+    padding-left: 5px;
     padding: 6px;
     height: 100%;
 }
@@ -80,8 +77,8 @@ body {
 
 .home {
     padding-bottom: 70px;
-    height: 100%;
-    width: 100%;
+    height: auto;
+    width: auto;
 }
 
 .home-title {
@@ -141,4 +138,44 @@ body {
 .pokemon-preview:hover {
     box-shadow: 0px 8px 12px rgb(5, 5, 158);
     height: 100%;
+}
+
+@media screen and (max-width: 1600px) {
+
+    .navbar-title {
+        position: relative;
+        text-align: left;
+        color: yellow;
+        border-radius: 8px;
+        left: 0;
+        padding: 6px;
+        margin-right: 10px;
+        font-size: 15px;
+    }
+
+    .home-link {
+        text-align: left;
+        color: yellow;
+        border-radius: 8px;
+        padding: 6px;
+        font-size: 15px;
+    }
+
+    .add-link {
+        text-align: left;
+        color: yellow;
+        border-radius: 8px;
+        padding-left: 5px;
+        padding: 6px;
+        font-size: 15px;
+    }
+
+    .imgNavbar {
+        display: none;
+        padding-bottom: 20px;
+        width: 25%;
+        height: 25%;
+
+    }
+    
 }
